--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ymd"]
+	path = ymd
+	url = https://github.com/shrektan/ymd
+	shallow = true
+	registered = true
